tests/baselines/reference/for-of53.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of53.ts(1,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of53.ts (1 errors) ====
    for (let v of []) {
                  ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        var v;
    }